设置面板浮动+动画
20140317

--- a/layout/default.html
+++ b/layout/default.html
@@ -22,6 +22,7 @@
     </div>
     <div class="main-right-container">
         <div class="main-right-panel" right-panel>
+            <include src="SettingPanel.html" /> 
             <div name="panel_preview" selected="true">
                 <div class="panel_content">
                     <include src="plugin/main.html" /> 
