--- a/layout/plugin/main.html
+++ b/layout/plugin/main.html
@@ -1,5 +1,4 @@
-﻿<a>目录设置：</a><input type="text" id="txtGamePath" style="font-size:14px" /><a id="btnSelectPath" class="button">...</a>
-<div id="btnOneKeyUp" class="button"></div>
+﻿<div id="btnOneKeyUp" class="button"></div>
 <div id="tipInterfaceSummary">检测到28个插件，9个可更新。</div>
 <style type="text/css">
 #txtGamePath {
@@ -13,7 +12,7 @@
 }
 #btnSelectPath { margin-left:10px;padding:0 5px;background-color:#DDD; }
 #btnSelectPath:hover { background-color:#EEE; }
-#btnOneKeyUp { margin: 60px auto 20px auto; background:url(plugin/images/one_key_up.png) no-repeat; width:174px; height:174px; behavior:btnOneKeyUp; }
+#btnOneKeyUp { margin: 120px auto 20px auto; background:url(plugin/images/one_key_up.png) no-repeat; width:174px; height:174px; behavior:btnOneKeyUp; }
 #btnOneKeyUp:hover { background:url(plugin/images/one_key_up_hover.png) no-repeat; }
 #btnOneKeyUp[loading] { background:url(plugin/images/one_key_up_loading.gif) no-repeat; }
 #tipInterfaceSummary { text-align:center; width:100%; }
