--- a/layout/styles/default.css
+++ b/layout/styles/default.css
@@ -25,12 +25,14 @@ body {
 
 /* 内容区 */
 .main-right-container {
+    overflow:hidden; 
 	vertical-scrollbar: mini_scrollbar;
 	position: absolute; top: @CAPTION_HEIGHT; right: 0; bottom: 0; left:@MENU_WIDTH;
     border-top:1px solid @BORDER_COLOR;
 	background: @PANEL_COLOR;
 }
 .main-right-container div[name] {
+    overflow:hidden; 
 	display: block; padding: 0; margin: 0; 
 	position: absolute; top: 0; right: 0; bottom: 0; left:0;
 	overflow: auto; vertical-scrollbar: mini_scrollbar;
