梳理目录+开始团队事件监控界面

--- a/layout/SettingPanel.html
+++ b/layout/SettingPanel.html
@@ -1,16 +1,19 @@
-<div id="btnToggleSettingPanel" aniStartVal="-580" aniEndVal="0"><a style="color:#FFF">目录设置：</a><input type="text" id="txtGamePath" style="font-size:14px" /><a id="btnSelectPath" class="button">...</a></div>
+<div id="btnToggleSettingPanel" aniStartVal="-580" aniEndVal="0">
+    <a style="color:#FFF">目录设置：</a><input type="text" disabled="disabled" id="txtGamePath" />
+    <a id="btnSelectPath" class="button">...</a>
+</div>
 <style type="text/css">
 /* 设置面板动画 */
 #btnToggleSettingPanel {
     z-index:9999;
     font:normal bold 18px/20px "Microsoft YaHei",微软雅黑,"MicrosoftJhengHei",华文细黑,STHeiti,MingLiu;
-    position: absolute; width: 600px; left:-580px; padding: 5px; top:10px;
-    background-color:#444; cursor:pointer; opacity: 0.75;
+    position: absolute; width: 590px; left:-580px; padding: 5px; top:10px;
+    background-color:#444; opacity: 0.75;
 	/*初始化事件*/
 	hover-on!:
         self.stop-timer(),self::left==-580?(self.stop-animation(),self.aniEndVal="0",self.start-animation( 0.3s )); /*启动动画*/
     hover-off!: 
-        self::left==0?self.start-timer( 900 ); /*启动动画*/
+        self.aniEndVal==0?(self.stop-timer(),self.stop-animation(),self.start-timer( 900 )); /*启动动画*/
     
     /*动画事件*/
     animation-step!:
@@ -26,6 +29,8 @@
         self.aniEndVal="-580",self.stop-animation(),self.start-animation( 1s ),self.stop-timer();
 }
 #txtGamePath {
+    font-size:12px;
+    padding:2px 5px;
     width: 450px;
     background: @PANEL_COLOR;
     border:1px solid @PANEL_COLOR;
@@ -34,6 +39,6 @@
     background: @PANEL_HOVER_COLOR;
     border:1px solid #000;
 }
-#btnSelectPath { margin-left:10px;padding:0 5px;background-color:#DDD; behavior:btnSelectPath; }
+#btnSelectPath { padding:0px 3px;background-color:#DDD; behavior:btnSelectPath; }
 #btnSelectPath:hover { background-color:#EEE; }
 </style>
