--- a/layout/default.html
+++ b/layout/default.html
@@ -30,7 +30,7 @@
             </div>
             <div name="panel_j3ui">
                 <div class="panel_content">
-                    <h5>操作系统</h5>
+                    <include src="plugin/j3ui.html" /> 
                 </div>
             </div>
             <div name="panel_yylmacro">
