--- a/layout/plugin/j3ui.html
+++ b/layout/plugin/j3ui.html
@@ -1,26 +1,10 @@
-﻿<html command="window-caption">
-<head>
-  <link rel="stylesheet" href="styles/windowBorder.css" />
-  <link rel="stylesheet" href="styles/global.css" />
-  <link rel="stylesheet" href="styles/default.css" />
-</head> 
-<body> 
-    <include src="windowBorder.html" /> 
-    <div class="main-left-container" ><div class="main-left">
-        <div class="left-menu-container">
-            <li title="插件总览" class="left-menu" url="/layout/plugin/dntj.html" selected><span>插件总览</span></li>
-            <li title="团队事件监控" class="left-menu" url="/layout/plugin/dntj.html"><span>团队事件监控</span></li>
-            <li title="YYL超级宏" class="left-menu" url="/layout/plugin/dntj.html"><span>YYL超级宏</span></li>
-            <li title="交易行助手" class="left-menu" url="/layout/plugin/mmcs.html"><span>交易行助手</span></li>
-            <li title="海鳗插件" class="left-menu" url="/layout/plugin/mmcs.html"><span>海鳗插件</span></li>
-            <li title="多玩盒子" class="left-menu" url="/layout/plugin/ldxf.html"><span>多玩盒子</span></li>
-            <li title="關於" class="left-menu" url="/layout/plugin/ldxf.html"><span>關於</span></li>
-        </div>
-    </div></div>
-    <div class="f_right">
-        <widget cls="static" data-url="/layout/plugin/dntj.html" style="width:100%%;height:100%%;"></widget>
-        <button>1234567</button>
-    </div>
-    <div class="f_cls"></div>
-</body>
-</html>
+﻿<div style="text-align:center; width:100%;font-size:30px;color:#000080">配置文件选择</div>
+<div class="" id="divJ3uiSelectConfigPanel"></div>
+<div class="" id="divJ3uiControlPanel">
+    <div class="button f_left" id="btnJ3uiUpdate">更新插件</div>
+</div>
+<style type="text/css">
+#divJ3uiSelectConfigPanel{ position: absolute; left:30px;right:30px;top:60px;bottom:80px;background-color:#888; }
+#divJ3uiControlPanel{ position: absolute; left:30px;right:30px;bottom:20px;height:40px;background-color:#888; }
+#btnJ3uiUpdate{ font-size:18px;padding:10px 15px; background-color:#444; }
+</style>
