版本检测雏形完成

--- a/layout/default.html
+++ b/layout/default.html
@@ -35,7 +35,7 @@
             </div>
             <div name="panel_yylmacro">
                 <div class="panel_content">
-                    <h5>上网浏览</h5>
+                    <widget id="browser_yyl" data-url="http://www.yylmacro.com/yylmacro" cls="static" style="position:absolute;top:10px;bottom:10px;left:30px;right:10px;overflow-x:hidden;"></widget>
                 </div>
             </div>
             <div name="panel_jx3auction">
@@ -45,7 +45,7 @@
             </div>
             <div name="panel_haiman">
                 <div class="panel_content">
-                    <h5>电子表格</h5>
+                    <pre id="boxHMFeature" style="position:absolute;top:10px;bottom:10px;left:30px;right:10px;overflow-x:hidden;">boxHMFeature</pre>
                 </div>
             </div>
             <div name="panel_jx3box">
