--- a/layout/plugin/j3ui.html
+++ b/layout/plugin/j3ui.html
@@ -4,7 +4,7 @@
     <div class="button f_left" id="btnJ3uiUpdate">更新插件</div>
 </div>
 <style type="text/css">
-#divJ3uiSelectConfigPanel{ position: absolute; left:30px;right:30px;top:60px;bottom:80px;background-color:#888; }
+#divJ3uiSelectConfigPanel{ position: absolute; left:30px;right:30px;top:60px;bottom:80px;background-color:#888;overflow:auto; }
 #divJ3uiControlPanel{ position: absolute; left:30px;right:30px;bottom:20px;height:40px;background-color:#888; }
 #btnJ3uiUpdate{ font-size:18px;padding:10px 15px; background-color:#444; }
 </style>
