--- a/layout/plugin/main.html
+++ b/layout/plugin/main.html
@@ -1,8 +1,8 @@
 ﻿<div id="btnOneKeyUp" class="button"></div>
-<div id="tipInterfaceSummary">检测到28个插件，9个可更新。</div>
+<div id="tipMainTips">检测到28个插件，9个可更新。</div>
 <style type="text/css">
 #btnOneKeyUp { margin: 120px auto 20px auto; background:url(plugin/images/one_key_up.png) no-repeat; width:174px; height:174px; behavior:btnOneKeyUp; }
 #btnOneKeyUp:hover { background:url(plugin/images/one_key_up_hover.png) no-repeat; }
 #btnOneKeyUp[loading] { background:url(plugin/images/one_key_up_loading.gif) no-repeat; }
-#tipInterfaceSummary { text-align:center; width:100%; }
+#tipMainTips { text-align:center; width:100%; }
 </style>
