炒鸡宏界面

--- a/layout/default.html
+++ b/layout/default.html
@@ -35,7 +35,7 @@
             </div>
             <div name="panel_yylmacro">
                 <div class="panel_content">
-                    <widget id="browser_yyl" data-url="http://www.yylmacro.com/yylmacro" cls="static" style="position:absolute;top:10px;bottom:10px;left:30px;right:10px;overflow-x:hidden;"></widget>
+                    <widget id="browser_yyl" data-url="http://www.yylmacro.com/yylmacro" cls="static" style="position:absolute;top:0;bottom:0;left:0;right:0;overflow-x:hidden;overflow-y:auto;"></widget>
                 </div>
             </div>
             <div name="panel_jx3auction">
